--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,3 +15,21 @@ a {
   box-sizing: border-box;
 }
 
+.popupDom{
+    background : rgba(0,0,0,0.25);
+    position : fixed;
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+}
+
+.popupDomInsert{
+  position : fixed;
+  left:35%;
+  top:25%;
+  height:50% !important;
+  width:30% !important;
+  background : rgba(255, 255, 255);
+  padding: 10px 0px;
+}
